tests/ui/type-alias-impl-trait/issue-53092-2.stderr
error: only functions and methods can define opaque types
  --> $DIR/issue-53092-2.rs:6:1
   |
LL | #[define_opaque(Bug)]
   | ^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `U: From<T>` is not satisfied
  --> $DIR/issue-53092-2.rs:12:5
   |
LL |     |x| x.into()
   |     ^^^^^^^^^^^^ the trait `From<T>` is not implemented for `U`
   |
note: required by a bound in `make_bug`
  --> $DIR/issue-53092-2.rs:11:19
   |
LL | fn make_bug<T, U: From<T>>() -> Bug<T, U> {
   |                   ^^^^^^^ required by this bound in `make_bug`
help: consider restricting type parameter `U` with trait `From`
   |
LL | type Bug<T, U: std::convert::From<T>> = impl Fn(T) -> U + Copy;
   |              +++++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
